--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
+        "@eslint/create-config": "0.4.2",
         "@project-serum/anchor": "^0.26.0"
     },
     "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^10.0.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5",
-        "prettier": "^2.6.2"
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "chai": "^4.3.4",
+        "eslint": "^8.0.1",
+        "eslint-config-standard-with-typescript": "^31.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "mocha": "^9.0.3",
+        "prettier": "^2.6.2",
+        "ts-mocha": "^10.0.0",
+        "typescript": "*"
     }
 }
